--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6326,11 +6326,11 @@ dd.project-people {
 }
 .clients-list .tab-pane {
   position: relative;
-  height: 600px;
+  /*height: 600px;*/
 }
 .client-detail {
   position: relative;
-  height: 620px;
+  /*height: 620px;*/
 }
 .clients-list table tr td {
   height: 46px;
