Further work on resolutions

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,3 +1,17 @@
+
+.resolution-print {
+    font-family: 'EB Garamond', serif !important;
+    width: 670px;
+    margin: 0 auto;
+
+    border: 1px solid #c0c0c0;
+    padding: 3px;
+}
+
+.resolution-header-block {
+    text-align: center;
+}
+
 .notification-item {
     white-space: normal;
 }
