Further work on resolutions

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -4,7 +4,7 @@
     width: 670px;
     margin: 0 auto;
 
-    border: 1px solid #c0c0c0;
+    /*border: 1px solid #c0c0c0;*/
     padding: 3px;
 }
 
